--- a/requirements.txt
+++ b/requirements.txt
@@ -6,17 +6,20 @@ defusedxml==0.7.0rc1
 Django==2.2.24
 django-crispy-forms==1.9.1
 idna==2.10
+mysqlclient==2.0.1
 oauthlib==3.1.0
 psycopg2-binary==2.8.5
 pycparser==2.20
 PyJWT==1.7.1
+python-http-client==3.2.7
 python3-openid==3.2.0
 pytz==2020.1
 requests==2.28.2
 requests-oauthlib==1.3.0
+sendgrid==6.4.5
 six==1.15.0
 social-auth-app-django==4.0.0
 social-auth-core==3.3.3
 sqlparse==0.3.1
+starkbank-ecdsa==1.0.0
 urllib3==1.26.5
-
