--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+0masgiref==3.6.0
 certifi==2022.12.7
 cffi==1.14.1
 chardet==3.0.4
+charset-normalizer==3.0.1
 cryptography==3.3.2
 defusedxml==0.7.0rc1
-Django==2.2.28
+Django==3.2.15
 django-crispy-forms==1.9.1
 idna==2.10
 mysqlclient==2.0.1
