--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ defusedxml==0.7.0rc1
 Django==4.2.6
 django-crispy-forms==1.9.1
 idna==2.10
-mysqlclient==2.0.1
+mysqlclient 2.2.0
 oauthlib==3.1.0
 psycopg2-binary==2.8.5
 pycparser==2.20
